testdata/typechecker/error/BinopTest-err1.java
int main() {
            int x;
            x = true + 2; // TE
		return 0;
}


